--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
             <section id="review-movie">
               <label for="location"> Your Review </label>
-              <input id = "input-form" type="text" name="location" id="location" required/>
-              <button id="submit-form" type="submit" value="Submit Review"> Submit Review</button>
-              <!-- <input id = "submit-form" type="submit" value="Submit Review" /> -->
+              <input id = "input-form" type="text" name="review" required/>
+              <!-- <input id="submit-form" type="text" value="Submit Review"/> -->
+              <input id = "submit-form" type="submit" value="Submit Review" />
             </section>
             
           
