Adjustment after grading

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
       <img src="./images/ghibli-logo.png" alt="" srcset="" />
     </header>
 
-    <div class="class">
+    <div >
       <select name="" id="pick-movie"></select>
     </div>
 
-    <form class="event">
-      <section id="display-info">
+    <section id="display-info">
         <h3 id="title"></h3>
         <p id="year-release"></p>
         <p id="description"></p>
-      </section>
-
-      <section id="review-movie">
+    </section>
+    
+    <form>
+      <!-- <section id="review-movie"> -->
         <label for="location"> Your Review </label>
         <input id="input-form" type="text" name="review" required />
         <input id="submit-form" type="submit" value="Submit Review" />
-      </section>
+      <!-- </section> -->
     </form>
     <ul id="ulMovie"></ul>
   </body>
